--- a/client/index.html
+++ b/client/index.html
@@ -7,5 +7,8 @@
 	<h1>Node.js and Express Hosted on Microsoft Azure Template</h1>
 	<p>This repository is a template that can be used to create a Node.js and Express website for hosting on Microsoft 
 	Azure.</p>
+	<p>
+		Version 2.
+	</p>
 </body>
 </html>
