updated portfolio to include about me page

--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Node.js on Azure Template</title>
-</head>
-<body>
-	<h1>Node.js and Express Hosted on Microsoft Azure Template</h1>
-	<p>This repository is a template that can be used to create a Node.js and Express website for hosting on Microsoft 
-	Azure.</p>
-	<p>
-		Version 2.
-	</p>
-</body>
+<html lang = "en">
+    <head>
+        <link rel="stylesheet" href = "index.css">
+        <title>
+            Assignment Portfolio
+        </title>
+
+    </head>
+    <body>
+		<h1 id="Header">James Barkauskas</h1>
+		<h2>Sprint 1</h2>
+		<hr>
+		<h4>About Me Page</h4>
+		<a href="AboutMe.html">About Me</a>
+
+		<h2>Spint 2</h2>
+		<hr>
+		<h4>Web Resume</h4>
+		<a href="https://web-resume-jb.azurewebsites.net/">Resume</a>
+		
+
+        
+        
+
+    </body>
 </html>
