added dice game to html page

--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,10 @@
 		<hr>
 		<h4>Web Resume</h4>
 		<a href="https://web-resume-jb.azurewebsites.net/">Resume</a>
+
+		<h4>Dice Game</h4>
+		<a href="https://dice-game-jb.azurewebsites.net/">Dice Game</a>
+		
 		
 
         
