--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,10 @@
 		<h4>Dice Game</h4>
 		<a href="https://dice-game-jb.azurewebsites.net/">Dice Game</a>
 		
+		<h2>Sprint 3</h2>
+		<hr>
+		<h4>Getting to Know Each Other</h4>
+		<a href="https://titanicswimteam.azurewebsites.net/">Getting to Know Each Other</a>
 		
 
         
