updated with sprint-03 assignments

--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,14 @@
 		<h4>Getting to Know Each Other</h4>
 		<a href="https://titanicswimteam.azurewebsites.net/">Getting to Know Each Other</a>
 		
+		<h4>Dogs API tutorial from Brad Schiff</h4>
+		<a href="https://dogsapiex-jb.azurewebsites.net">Dogs API</a>
 
+		<h4>Lions, Tigers, Bears</h4>
+		<a href="https://lionstigersbears-jb.azurewebsites.net">Lions, Tigers, and Bears</a>
+
+		<h4>Amazeriffic</h4>
+		<a href="https://amazeriffic-jb.azurewebsites.net">Amazeriffic</a>
         
         
 
