added map mania lite

--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,11 @@
 
 		<h4>Amazeriffic</h4>
 		<a href="https://amazeriffic-jb.azurewebsites.net">Amazeriffic</a>
+
+		<h2>Sprint 4</h2>
+		<hr>
+		<h4>Map Mania Lite</h4>
+		<a href="https://map-mania-lite-jb.azurewebsites.net/">Map Mania Lite</a>
         
         
 
