added map mania

--- a/client/index.html
+++ b/client/index.html
@@ -40,6 +40,9 @@
 		<hr>
 		<h4>Map Mania Lite</h4>
 		<a href="https://map-mania-lite-jb.azurewebsites.net/">Map Mania Lite</a>
+
+		<h4>Map Mania</h4>
+		<a href="https://map-mania-jb.azurewebsites.net">Map Mania</a>
         
         
 
